# personal-trainer

./: .gitignore  AGENTS.md  README.md  RECIPE_SUGGESTION_PRD.md  pyproject.toml
backend/: AGENTS.md  README.md
docs/: codex_prompt_management_codex_optimized.md  jeff_the_cook_prd.md  workout_prd.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
trainer/: .env.example  README.md  pyproject.toml
trainer/prompts/trainer/: plan_review.jinja  plan_revision.jinja  reviewer_arnold_system_prompt.jinja  reviewer_doctor_mike_system_prompt.jinja  weekly_plan.jinja  weekly_plan_system_prompt.jinja
trainer/scripts/: build_exercise_library.py  fetch_wger_catalog.py
trainer/src/personal_trainer/: __init__.py  blob_sync.py  cli.py  exercise_library.py  markdown_io.py  models.py  notes_publisher.py  ollama_client.py  openai_client.py  pdf_io.py  planner.py  recipe_suggester.py  workout_planner.py
trainer/src/personal_trainer/assets/exercise_library/: catalog.json
trainer/src/personal_trainer/assets/recipes/: catalog.json
trainer/src/personal_trainer/llm/: __init__.py  runner.py
trainer/src/personal_trainer/prompting/: __init__.py  manager.py
trainer/templates/: checkin.template.md
trainer/tests/: conftest.py  test_blob_sync.py  test_build_exercise_library.py  test_cli_checkins.py  test_cli_flow.py  test_exercise_library.py  test_llm_runner.py  test_markdown_io.py  test_notes_publisher.py  test_pdf_io.py  test_prompt_manager.py  test_recipe_suggester.py  test_workout_planner.py
(+68 files in other folders)
